# bel-pelajaran-py

./: .gitignore  README.md  cek_konfig.py  cek_sound.py  coba.toml  example.toml  konfig.toml  konfig_ujian.toml  main.py  pyproject.toml  pyrightconfig.json  requirements.txt
assets/: notes.txt
bel_pelajaran/: __init__.py  check_config.py  check_sound.py  cli.py  database.py  main.py
