[project]
name = "bel-pelajaran"
version = "0.1.0"
description = "School bell scheduling system"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "schedule>=1.2.1",
    "toml>=0.10.2",
    "playsound3>=0.3.0",
]

[project.scripts]
bel = "bel_pelajaran:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
